k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pokemon-app-service
spec:
  type: ClusterIP
  selector:
    app: pokemon-app
  ports:
  - protocol: TCP
    port: 80 # Service port
    targetPort: 8080 # Container port
